--- a/index.html
+++ b/index.html
@@ -3,9 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Al 313 HTMT</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./images/icon.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>AL 313 HTMT</title>
 </head>
+
+    <!-- ******* Let's go! ****** -->
+
 <body>
-    <h1>hello there!</h1>
+    
+    <header id="header">
+
+        <!-- the nav menu -->
+        <nav>
+            <ul class="navItems1">
+                <li>AL 313 HTMT</li>
+            </ul>
+            <ul class="navItems2">
+                <i class="fa fa-navicon"></i>
+                <span id="menuLinks">
+                    <li><a href="#">one</a></li>
+                    <li><a href="#">two</a></li>
+                </span>
+
+            </ul>
+        </nav>
+
+        <div class="title">
+            <h1 id="title">Hello there!</h1>
+            <p id="para">welcome to my website!</p>
+        </div>
+
+    </header>
+
+    <div class="scroll">
+        <h2>scroll down!</h2>
+    </div>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div class="scroll">
+        <h2>keep scrolling!</h2>
+    </div>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+    <div class="scroll">
+        <h2>continue!</h2>
+    </div>
+
+    <!-- yes, keep going...  -->
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>*<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+
+    <div class="nothing">
+        <h2>there is nothing here...</h2>
+        <h3>but you can click this button to go back</h3>
+        <a href="#" onclick="scary()">back</a>
+    </div>
+
+
+    <script src="./script.js"></script>
+
+
 </body>
 </html>
