--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <ul class="navItems2">
                 <i class="fa fa-navicon"></i>
                 <span id="menuLinks">
-                    <li><a href="#">one</a></li>
-                    <li><a href="#">two</a></li>
+                    <li><a href="https://fa.wikipedia.org/wiki/%D8%AF%D8%A7%D8%B1%DA%A9_%D9%88%D8%A8">one</a></li>
+                    <li><a href="https://mrtadris.com/teachers/%D9%85%D8%AF%D8%B1%D8%B3-%D9%81%DB%8C%D8%B2%DB%8C%DA%A9-%D9%85%D8%AD%D9%85%D8%AF%D8%B1%D8%B6%D8%A7-%D9%81%D8%B1%D8%AE%DB%8C/">two</a></li>
                 </span>
 
             </ul>
